--- a/CSS/class3_position_fixedandsticky.css
+++ b/CSS/class3_position_fixedandsticky.css
@@ -8,7 +8,6 @@ header {
   height: 300px;
   background-image: url('image/keyboard.avif');
   background-repeat: no-repeat;
-
   text-align: center;
   font-size: 40px;
   padding: 30px;
@@ -27,23 +26,34 @@ nav {
   justify-content: space-between;
   z-index: 10;
   align-items: center;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
-.fa-crown {
-  font-size: 50px;
+nav img {
+  /* font-size: 50px; */
   height: 70px;
   width: 80px;
   padding-top: 10px;
-  background-color: white;
-  color: goldenrod;
-  border-radius: 15px;
+  border: 1px solid black;
   box-shadow: -1px -1px 3px black;
-  transition: all 2s;
+  border-radius: 7px;
+  background-color: rgb(1, 1, 33);
+  margin-right: 50px;
+  /* 
+  color: goldenrod;
+  
+  ; */
+  /* transition: all 2s; */
 }
 
-.fa-crown:hover {
+/* .fa-crown:hover {
   transform: scale(1.5);
+} */
+
+.log-icon {
+  font-size: 50px;
+  margin: 10px;
+  color: white;
 }
 
 ul {
@@ -93,7 +103,6 @@ li a {
 
 /* card-section */
 .card {
-
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
