--- a/CSS/class3_position_fixedandsticky.css
+++ b/CSS/class3_position_fixedandsticky.css
@@ -11,7 +11,7 @@ header {
   text-align: center;
   font-size: 40px;
   padding: 30px;
-  z-index: 10;
+
   color: white;
 }
 
@@ -49,6 +49,14 @@ nav img {
 /* .fa-crown:hover {
   transform: scale(1.5);
 } */
+
+#search {
+  height: 30px;
+  width: 200px;
+  padding-left: 15px;
+  border: solid black;
+  border-radius: 5px;
+}
 
 .log-icon {
   font-size: 50px;
